[gd_scene load_steps=5 format=3 uid="uid://boirnmg1rori6"]

[ext_resource type="Script" uid="uid://bfq1bihs6ws4v" path="res://src/Systems/Player/PlayerUI/PlayerStatus/player_status.gd" id="1_32lks"]
[ext_resource type="Texture2D" uid="uid://og0oa33hkws8" path="res://assets/UI/StatusBar/bar_texture.png" id="2_ym5uv"]
[ext_resource type="Texture2D" uid="uid://dgle6f7hy0jkc" path="res://assets/UI/StatusBar/life_texture.png" id="3_ckb1n"]
[ext_resource type="Texture2D" uid="uid://ca0ashk2uak3o" path="res://assets/UI/StatusBar/mana_texture.png" id="4_ckb1n"]

[node name="PlayerStatus" type="MarginContainer"]
offset_right = 64.0
offset_bottom = 56.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_32lks")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="ClassTexture" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_vertical = 0
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="LifeBar" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
texture_under = ExtResource("2_ym5uv")
texture_progress = ExtResource("3_ckb1n")

[node name="LifeLabel" type="Label" parent="HBoxContainer/VBoxContainer/LifeBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaBar" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
texture_under = ExtResource("2_ym5uv")
texture_progress = ExtResource("4_ckb1n")

[node name="ManaLabel" type="Label" parent="HBoxContainer/VBoxContainer/ManaBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1
